--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethers": "^5.6.2",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "moment": "^2.29.2"
   }
 }
