--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "webapp-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "ethers": "^5.6.2",
-    "express": "^4.17.3",
-    "moment": "^2.29.2"
-  }
+	"name": "webapp-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.0",
+		"ethers": "^5.6.2",
+		"express": "^4.17.3",
+		"moment": "^2.29.2"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.15"
+	}
 }
