--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"dotenv": "^16.0.0",
 		"ethers": "^5.6.2",
 		"express": "^4.17.3",
-		"moment": "^2.29.2"
+		"moment": "^2.29.2",
+		"moralis": "^1.5.9"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
