--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"ethers": "^5.6.2",
 		"express": "^4.17.3",
 		"moment": "^2.29.2",
-		"moralis": "^1.5.9"
+		"moralis": "^1.5.9",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
