--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
+		"ethereum-input-data-decoder": "^0.4.1",
 		"ethers": "^5.6.2",
 		"express": "^4.17.3",
 		"moment": "^2.29.2",
