--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"ethereum-input-data-decoder": "^0.4.1",
 		"ethers": "^5.6.2",
 		"express": "^4.17.3",
+		"googleapis": "^100.0.0",
 		"moment": "^2.29.2",
 		"moralis": "^1.5.9",
 		"nft.storage": "^6.2.0",
+		"nodemailer": "^6.7.5",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
